# document-scanner-summarizer

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  cspell.json  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  api.py  cli.py  extractors.py  main.py  ocr.py  preprocessing.py  summarizer.py
tests/: conftest.py  test_api.py  test_cli.py  test_extractors.py  test_ocr_extractors_mocked.py  test_ocr_real_images.py  test_preprocessing.py  test_preprocessing_real_images.py  test_summarizer.py
